minor fix to color and spacing in SongpageScene's listview

--- a/src/main/resources/CSS/songlisttemplateSceneStyles.css
+++ b/src/main/resources/CSS/songlisttemplateSceneStyles.css
@@ -1,5 +1,5 @@
 #songlistPane {
-    -fx-background-color: #1c1c1c8c;
+    -fx-background-color: #cfcfcf1b;
     -fx-background-radius: 10px;
 }
 
